# Recloser3pManagement

./: .gitignore  APPLIED_FIXES_SUMMARY.md  CMakeLists.txt  CMakePresets.json  QUICK_FIX_GUIDE.md  README.md  WINDOWS_MSVC_BUILD_REVIEW.md  vcpkg.json
client/: .env.local  README.md  package-lock.json  package.json
client/src/app/: Configurator.tsx  actions.ts  globals.css  layout.tsx  page.tsx
client/src/lib/: grpc.ts
data/: schema.sql
docs/: DATABASE_SCHEMA_DIAGRAM.md  QUICK_REFERENCE.md  SQL_REFERENCE.sql  UI_COMPONENT_IMPLEMENTATION_SUMMARY.md  UI_COMPONENT_SCHEMA.md
include/: DatabaseSchema.hpp  RecloserManager.hpp  RecloserServiceImpl.hpp  UIComponentManager.hpp
proto/: recloser.proto
src/: RecloserManager.cpp  RecloserServiceImpl.cpp  main.cpp
